# musharing_chatbot

./: Dockerfile  README.md  gh.Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
db/: README.txt  muvtuber.sqlite3
musharing_chatbot/: __main__.py  chatbot.py  server.py  train_luge_diamante.py
musharing_chatbot/chatbotapi/: musharing_chatbot_pb2_grpc.py
musharing_chatbot/chatbotapiv2/: README.md
